# vmav-ros-pkg

./: README.md
calibration/camera_calibration/: CMakeLists.txt  package.xml
calibration/camera_calibration/include/camera_calibration/: CameraCalibration.h  Chessboard.h  StereoCameraCalibration.h
calibration/camera_calibration/src/: CameraCalibration.cpp  Chessboard.cpp  ChessboardCorner.h  ChessboardQuad.h  StereoCameraCalibration.cpp  convert_stereo_calibration_data.cpp  mono_camera_calibration.cpp  stereo_camera_calibration.cpp
calibration/hand_eye_calibration/: CMakeLists.txt  package.xml
calibration/hand_eye_calibration/include/hand_eye_calibration/: ExtendedHandEyeCalibration.h  HandEyeCalibration.h
calibration/hand_eye_calibration/src/: ExtendedHandEyeCalibration.cpp  HandEyeCalibration.cpp
calibration/hand_eye_calibration/test/: ExtendedHandEyeCalibration_test.cpp  HandEyeCalibration_test.cpp
calibration/pose_imu_calibration/: CMakeLists.txt  package.xml
calibration/pose_imu_calibration/include/pose_imu_calibration/: PoseIMUCalibration.h
calibration/pose_imu_calibration/src/: PoseIMUCalibration.cpp  SensorDataBuffer.h  vicon_imu_calibration.cpp
calibration/pose_imu_calibration/test/: PoseIMUCalibration_test.cc
calibration/self_multicam_calibration/: CMakeLists.txt  package.xml
calibration/self_multicam_calibration/include/self_multicam_calibration/: SelfMultiCamCalibration.h
calibration/self_multicam_calibration/src/: SelfMultiCamCalibration.cpp  self_multicam_calibration_node.cpp  visualize_camera_system.cpp  write_camera_info.cpp
calibration/vicon_multicam_calibration/: CMakeLists.txt  package.xml
calibration/vicon_multicam_calibration/include/vicon_multicam_calibration/: ViconMultiCamCalibration.h
calibration/vicon_multicam_calibration/src/: ViconMultiCamCalibration.cpp  diff_vicon_multicam_calibration.cpp  vicon_multicam_calibration_node.cpp
camera_models/: CMakeLists.txt  package.xml
camera_models/include/camera_models/: Camera.h  CameraFactory.h  CataCamera.h  CostFunctionFactory.h  EquidistantCamera.h  PinholeCamera.h
camera_models/src/: Camera.cpp  CameraFactory.cpp  CataCamera.cpp  CostFunctionFactory.cpp  EquidistantCamera.cpp  PinholeCamera.cpp
camera_models/test/: CataCamera_test.cpp  EquidistantCamera_test.cpp  PinholeCamera_test.cpp
camera_systems/: CMakeLists.txt  package.xml
camera_systems/include/camera_systems/: CameraSystem.h
camera_systems/src/: CameraSystem.cpp
cauldron/: CMakeLists.txt  package.xml
cauldron/include/cauldron/: AtomicContainer.h  DataBuffer.h  EigenQuaternionParameterization.h  EigenUtils.h  Enums.h  PLine.h  PLineCorrespondence.h  cauldron.h
cauldron/src/: EigenQuaternionParameterization.cpp  PLine.cpp  PLineCorrespondence.cpp  cauldron.cpp
dense_mapping/dynocmap/: CMakeLists.txt  package.xml
dense_mapping/dynocmap/include/dynocmap/: DynocMap.h  OcNode.h  OcTree.h  OccupancyCell.h  OccupancyTile.h
dense_mapping/dynocmap/src/: DynocMap.cpp  OcNode.cpp  OcTree.cpp  OcTreeCache.cpp  OcTreeCache.h  OcUtils.h  OccupancyTile.cpp
dense_mapping/dynocmap/test/: DynocMap_test.cpp  OcTree_test.cpp
dense_mapping/dynocmap_mapping/: CMakeLists.txt  package.xml
dense_mapping/dynocmap_mapping/src/: dynocmap_mapping_sim_node.cpp
dense_mapping/dynocmap_msgs/: CMakeLists.txt  package.xml
dense_mapping/dynocmap_msgs/msg/: DynocMap.msg  DynocMapTile.msg
dense_mapping/rviz_dynocmap_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
dense_mapping/rviz_dynocmap_plugin/include/rviz_dynocmap_plugin/: dynocmap_display.h  dynocmap_visual.h
dense_mapping/rviz_dynocmap_plugin/src/: dynocmap_display.cpp  dynocmap_visual.cpp
dense_mapping/sensor_models/: CMakeLists.txt  package.xml
dense_mapping/sensor_models/include/sensor_models/: LaserSensorModel.h  SensorModel.h  StereoSensorModel.h
dense_mapping/sensor_models/src/: LaserSensorModel.cpp  StereoSensorModel.cpp  stereo_sensor_model_sim.cpp
drivers/vicon_client/: CMakeLists.txt  package.xml
drivers/vicon_client/cfg/: ViconClient.cfg
drivers/vicon_client/src/: ViconClient.cpp  ViconClient.h  vicon_client_node.cpp
drivers/vrmagic_device/: CMakeLists.txt  package.xml  vrmagic_device_nodelet.xml
drivers/vrmagic_device/cfg/: VRmagicDevice.cfg
drivers/vrmagic_device/cmake/: FindRTI.cmake
drivers/vrmagic_device/src/: VRmagicCamera.cpp  VRmagicCamera.h  VRmagicDeviceDriver.cpp  VRmagicDeviceDriver.h  vrmagic_device_node.cpp  vrmagic_device_nodelet.cpp  vrmusbcam2.h  vrmusbcam2props.h  vrmusbcamcpp.cpp  vrmusbcamcpp.h
middleware/dds_ros/: CMakeLists.txt  dds_to_ros_bridge_nodelet.xml  package.xml
middleware/dds_ros/cmake/: FindRTI.cmake
middleware/dds_ros/src/: DdsRosBridge.cpp  DdsRosBridge.h  RosDdsBridge.cpp  RosDdsBridge.h  dds_to_ros_bridge_node.cpp  dds_to_ros_bridge_nodelet.cpp  ros_to_dds_bridge_node.cpp  utils.cpp
motion_estimation/gcam/: CMakeLists.txt  package.xml
motion_estimation/gcam/src/: GCamIMU.cpp
motion_estimation/gcam/test/: GCamIMU_test.cpp
motion_estimation/npoint/fivepoint/: CMakeLists.txt  package.xml
pose_estimation/: CMakeLists.txt  package.xml
pose_estimation/include/pose_estimation/: P3P.h  gP3P.h
pose_estimation/src/: P3P.cpp  gP3P.cpp
pose_estimation/test/: pose_estimation_test.cpp
slam/gcam_slam/: CMakeLists.txt  package.xml
slam/gcam_slam/src/: GCamDWBA.cpp  GCamSLAM.cpp  PoseGraphError.h  gcam_slam_node.cpp
slam/location_recognition/: CMakeLists.txt  package.xml
slam/location_recognition/src/: OrbLocationRecognition.cpp  train_orb_location_recognition.cpp
slam/pose_graph/: CMakeLists.txt  package.xml
slam/pose_graph/src/: PoseGraph.cpp  PoseGraphError.h  PoseGraphViz.cpp
slam/sparse_graph/: CMakeLists.txt  package.xml
slam/sparse_graph/src/: Pose.cpp  SparseGraph.cpp  SparseGraphViz.cpp  Transform.cpp
slam/sparse_mapping/stereo_sm/: CMakeLists.txt  package.xml
slam/visual_odometry/gcam_vo/: CMakeLists.txt  package.xml
slam/visual_odometry/mono_vo/: CMakeLists.txt  package.xml
slam/visual_odometry/stereo_vo/: CMakeLists.txt  package.xml
(+32 files in other folders)
