<?xml version="1.0"?>
<package>
  <name>hand_eye_calibration</name>
  <version>0.0.0</version>
  <description>The hand_eye_calibration package</description>

  <maintainer email="hengli@inf.ethz.ch">Lionel Heng</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cauldron</build_depend>
  <build_depend>ceres</build_depend>

  <run_depend>cauldron</run_depend>
  <run_depend>ceres</run_depend>
</package>
