<?xml version="1.0"?>
<package>
  <name>pose_imu_calibration</name>
  <version>0.0.0</version>
  <description>The pose_imu_calibration package</description>

  <maintainer email="hengli@inf.ethz.ch">Lionel Heng</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cauldron</build_depend>
  <build_depend>ceres</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sparse_graph</build_depend>

  <run_depend>cauldron</run_depend>
  <run_depend>ceres</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sparse_graph</run_depend>
</package>
