<?xml version="1.0"?>
<package>
  <name>vicon_multicam_calibration</name>
  <version>0.0.0</version>
  <description>The vicon_multicam_calibration package</description>

  <maintainer email="hengli@inf.ethz.ch">Lionel Heng</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>camera_calibration</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pose_imu_calibration</build_depend>

  <run_depend>camera_calibration</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>pose_imu_calibration</run_depend>
</package>
