<?xml version="1.0"?>
<package>
  <name>dynocmap</name>
  <version>0.1.0</version>
  <description>The dynocmap package</description>

  <maintainer email="hengli@inf.ethz.ch">Lionel Heng</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>dynocmap_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_models</build_depend>

  <run_depend>dynocmap_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_models</run_depend>
</package>
