<?xml version="1.0"?>
<package>
  <name>dynocmap_msgs</name>
  <version>0.0.0</version>
  <description>The dynocmap_msgs package</description>

  <maintainer email="hengli@inf.ethz.ch">hengli</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
