<?xml version="1.0"?>
<package>
  <name>rviz_dynocmap_plugin</name>
  <version>0.0.0</version>
  <description>The rviz_dynocmap_plugin package</description>

  <maintainer email="hengli@inf.ethz.ch">Lionel Heng</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cauldron</build_depend>
  <build_depend>dynocmap</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>cauldron</run_depend>
  <run_depend>dynocmap</run_depend>
  <run_depend>rviz</run_depend>

  <export>
    <rosdoc config="${prefix}/rosdoc.yaml"/>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
