<?xml version="1.0"?>
<package>
  <name>sensor_models</name>
  <version>0.1.0</version>
  <description>The sensor_models package</description>

  <maintainer email="hengli@inf.ethz.ch">Lionel Heng</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>tf</run_depend>
</package>
